--- a/Alatca/build_v3/zip/index.html
+++ b/Alatca/build_v3/zip/index.html
@@ -36,6 +36,35 @@
 <body><div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span12">
+			<dl>
+				<dt>
+					Rolex
+				</dt>
+				<dd>
+					Người sáng lập Rolex Hans Wilsdorf, vào năm 1908 ông đăng ký thương hiệu Thụy Sỹ Rolex.
+				</dd>
+				<dt>
+					Vacheron Constantin
+				</dt>
+				<dd>
+					Được thành lập vào năm 1775, Vacheron Constantin đã được 250 năm lịch sử,
+				</dd>
+				<dd>
+					Là sự tiếp nối lâu đời nhất và dài nhất thế giới của đồng hồ.
+				</dd>
+				<dt>
+					IWC
+				</dt>
+				<dd>
+					Được thành lập vào năm 1868, IWC có một "chuyên gia cơ khí" cho biết.
+				</dd>
+				<dt>
+					Cartier
+				</dt>
+				<dd>
+					Cartier đã có 150 năm lịch sử, đồ trang sức nổi tiếng sản xuất vàng và đồ trang sức bạc Pháp.
+				</dd>
+			</dl>
 			<div class="hero-unit">
 				<p>
 					Lorem ipsum dolor sit amet, id ius alterum imperdiet, ea nam habemus postulant reprehendunt, at errem dicam per.
