--- a/Alatca/savelayout/savelayout.html
+++ b/Alatca/savelayout/savelayout.html
@@ -1,6 +1,5 @@
 <html class="translated-ltr ">
 <head>
-<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="title" content="applications magazine publishing ">
@@ -53,13 +52,13 @@
             </div>
             <div class="btn-group">
               <button type="button" class="btn btn-primary" data-target="#downloadModal" rel="/build/downloadModal" role="button" data-toggle="modal"><i class="icon-chevron-down icon-white"></i><font>Downloading</font></button>
-              <button class="btn btn-primary" href="/share/index" role="button" data-toggle="modal" data-target="#shareModal"><i class="icon-share icon-white"></i><font>Chia sáº»</font></button>
+              <button class="btn btn-primary" href="/share/index" role="button" data-toggle="modal" data-target="#shareModal"><i class="icon-share icon-white"></i><font>Chia sẻ</font></button>
               <button class="btn btn-primary" href="#clear" id="clear"><i class="icon-trash icon-white"></i><font><font>Delete</font></font></button>
             </div>
             <div class="btn-group">
             <!--  
-								<button class="btn btn-primary" href="#undo" id="undo"><i class="icon-arrow-left icon-white"></i><font>Quay láº¡i</font></button>
-								<button class="btn btn-primary" href="#redo" id="redo"><i class="icon-arrow-right icon-white"></i><font>Äi tiáº¿p</font></button>
+								<button class="btn btn-primary" href="#undo" id="undo"><i class="icon-arrow-left icon-white"></i><font>Quay lại</font></button>
+								<button class="btn btn-primary" href="#redo" id="redo"><i class="icon-arrow-right icon-white"></i><font>Đi tiếp</font></button>
 		   -->
 			</div>
           </li>
@@ -72,15 +71,30 @@
 </div>
       
       <div class="lyrow">
-  <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i><font><font>loáº¡i bá»</font></font></a>
-  <span class="drag label"><i class="icon-move"></i><font><font>kÃ©o</font></font></span>
+  <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i><font><font>loại bỏ</font></font></a>
+  <span class="drag label"><i class="icon-move"></i><font><font>kéo</font></font></span>
   <div class="preview"><font><font>93</font></font></div>
   <div class="view">
     <div class="row-fluid clearfix">
       <div class="span12 column ui-sortable">
         
-        <div class="box box-element ui-draggable" style="display: block; "> <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i><font>XÃ³a</font></a> <span class="drag label"><i class="icon-move"></i><font><font>Drag</font></font></span> <span class="configuration"><button type="button" class="btn btn-mini" data-target="#editorModal" role="button" data-toggle="modal"><font>Chá»nh sá»­a</font></button> <a class="btn btn-mini" href="#" rel="well"><font>Inline</font></a> </span>
-              <div class="preview"><font>PhÃ¡c tháº£o</font></div>
+        <div style="display: block;" class="box box-element ui-draggable"> <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i><font>Xóa</font></a> <span class="drag label"><i class="icon-move"></i><font><font>Drag</font></font></span> <span class="configuration"><button type="button" class="btn btn-mini" data-target="#editorModal" role="button" data-toggle="modal"><font>Chỉnh sửa</font></button> <a class="btn btn-mini" href="#" rel="dl-horizontal"><font><font>Sắp xếp theo chiều rộng hoặc theo chiều dọc</font></font></a> </span>
+              <div class="preview"><font><font>Mô tả chi tiết</font></font></div>
+              <div class="view">
+                <dl contenteditable="true">
+                  <dt><font><font>Rolex</font></font></dt>
+                  <dd><font><font>Người sáng lập Rolex Hans Wilsdorf, vào năm 1908 ông đăng ký thương hiệu Thụy Sỹ Rolex.</font></font></dd>
+                  <dt><font><font>Vacheron Constantin</font></font></dt>
+                  <dd><font><font>Được thành lập vào năm 1775, Vacheron Constantin đã được 250 năm lịch sử,</font></font></dd>
+                  <dd><font><font>Là sự tiếp nối lâu đời nhất và dài nhất thế giới của đồng hồ.</font></font></dd>
+                  <dt><font><font>IWC</font></font></dt>
+                  <dd><font><font>Được thành lập vào năm 1868, IWC có một "chuyên gia cơ khí" cho biết.</font></font></dd>
+                  <dt><font><font>Cartier</font></font></dt>
+                  <dd><font><font>Cartier đã có 150 năm lịch sử, đồ trang sức nổi tiếng sản xuất vàng và đồ trang sức bạc Pháp.</font></font></dd>
+                </dl>
+              </div>
+            </div><div class="box box-element ui-draggable" style="display: block; "> <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i><font>Xóa</font></a> <span class="drag label"><i class="icon-move"></i><font><font>Drag</font></font></span> <span class="configuration"><button type="button" class="btn btn-mini" data-target="#editorModal" role="button" data-toggle="modal"><font>Chỉnh sửa</font></button> <a class="btn btn-mini" href="#" rel="well"><font>Inline</font></a> </span>
+              <div class="preview"><font>Phác thảo</font></div>
               <div class="view">
                 <div class="hero-unit" contenteditable="true">
                   <p><font>Lorem ipsum dolor sit amet, id ius alterum imperdiet, ea nam habemus postulant reprehendunt, at errem dicam per.</font></p>
