--- a/Alatca/build_v3/appmagazine/zip/index.html
+++ b/Alatca/build_v3/appmagazine/zip/index.html
@@ -37,45 +37,36 @@
 	<div class="row-fluid">
 		<div class="span12">
 			<div class="row-fluid">
-				<div class="span2">
-					<form>
-						<fieldset>
-							 <legend>Bảng duy nhất</legend> <label>Chữ ký bảng</label><input type="text"> <span class="help-block">Ở đây để giúp điền vào các thông tin.</span> <label class="checkbox"><input type="checkbox"> Kiểm tra sự đồng ý</label> <button type="submit" class="btn">Gửi</button>
-						</fieldset>
-					</form>
-				</div>
-				<div class="span6">
-					<dl>
-						<dt>
-							Rolex
-						</dt>
-						<dd>
-							Người sáng lập Rolex Hans Wilsdorf, vào năm 1908 ông đăng ký thương hiệu Thụy Sỹ Rolex.
-						</dd>
-						<dt>
-							Vacheron Constantin
-						</dt>
-						<dd>
-							Được thành lập vào năm 1775, Vacheron Constantin đã được 250 năm lịch sử,
-						</dd>
-						<dd>
-							Là sự tiếp nối lâu đời nhất và dài nhất thế giới của đồng hồ.
-						</dd>
-						<dt>
-							IWC
-						</dt>
-						<dd>
-							Được thành lập vào năm 1868, IWC có một "chuyên gia cơ khí" cho biết.
-						</dd>
-						<dt>
-							Cartier
-						</dt>
-						<dd>
-							Cartier đã có 150 năm lịch sử, đồ trang sức nổi tiếng sản xuất vàng và đồ trang sức bạc Pháp.
-						</dd>
-					</dl>
-				</div>
-				<div class="span4">
+				<div class="span12">
+					<ol>
+						<li>
+							Tin tức
+						</li>
+						<li>
+							Can thao, thi Đậu
+						</li>
+						<li>
+							Giải Trí, thiếc Đồn
+						</li>
+						<li>
+							Công Nghệ the information
+						</li>
+						<li>
+							Financial Toàn Cầu
+						</li>
+						<li>
+							Project bug weather
+						</li>
+						<li>
+							Trang chủ bất động sản
+						</li>
+						<li>
+							The game truc tuyen
+						</li>
+					</ol>
+					<form class="form-search">
+						<input class="input-medium search-query" type="text"> <button type="submit" class="btn">Tìm</button>
+					</form><img alt="140x140" src="img/a.jpg">
 				</div>
 			</div>
 			<div class="hero-unit">
