--- a/trunk/Alatca/savelayout/savelayout.html
+++ b/trunk/Alatca/savelayout/savelayout.html
@@ -78,22 +78,7 @@
     <div class="row-fluid clearfix">
       <div class="span12 column ui-sortable">
         
-        <div style="display: block;" class="box box-element ui-draggable"> <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i><font>Xóa</font></a> <span class="drag label"><i class="icon-move"></i><font><font>Drag</font></font></span> <span class="configuration"><button type="button" class="btn btn-mini" data-target="#editorModal" role="button" data-toggle="modal"><font>Chỉnh sửa</font></button> <a class="btn btn-mini" href="#" rel="dl-horizontal"><font><font>Sắp xếp theo chiều rộng hoặc theo chiều dọc</font></font></a> </span>
-              <div class="preview"><font><font>Mô tả chi tiết</font></font></div>
-              <div class="view">
-                <dl contenteditable="true">
-                  <dt><font><font>Rolex</font></font></dt>
-                  <dd><font><font>Người sáng lập Rolex Hans Wilsdorf, vào năm 1908 ông đăng ký thương hiệu Thụy Sỹ Rolex.</font></font></dd>
-                  <dt><font><font>Vacheron Constantin</font></font></dt>
-                  <dd><font><font>Được thành lập vào năm 1775, Vacheron Constantin đã được 250 năm lịch sử,</font></font></dd>
-                  <dd><font><font>Là sự tiếp nối lâu đời nhất và dài nhất thế giới của đồng hồ.</font></font></dd>
-                  <dt><font><font>IWC</font></font></dt>
-                  <dd><font><font>Được thành lập vào năm 1868, IWC có một "chuyên gia cơ khí" cho biết.</font></font></dd>
-                  <dt><font><font>Cartier</font></font></dt>
-                  <dd><font><font>Cartier đã có 150 năm lịch sử, đồ trang sức nổi tiếng sản xuất vàng và đồ trang sức bạc Pháp.</font></font></dd>
-                </dl>
-              </div>
-            </div><div class="box box-element ui-draggable" style="display: block; "> <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i><font>Xóa</font></a> <span class="drag label"><i class="icon-move"></i><font><font>Drag</font></font></span> <span class="configuration"><button type="button" class="btn btn-mini" data-target="#editorModal" role="button" data-toggle="modal"><font>Chỉnh sửa</font></button> <a class="btn btn-mini" href="#" rel="well"><font>Inline</font></a> </span>
+        <div class="box box-element ui-draggable" style="display: block; "> <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i><font>Xóa</font></a> <span class="drag label"><i class="icon-move"></i><font><font>Drag</font></font></span> <span class="configuration"><button type="button" class="btn btn-mini" data-target="#editorModal" role="button" data-toggle="modal"><font>Chỉnh sửa</font></button> <a class="btn btn-mini" href="#" rel="well"><font>Inline</font></a> </span>
               <div class="preview"><font>Phác thảo</font></div>
               <div class="view">
                 <div class="hero-unit" contenteditable="true">
