--- a/trunk/Alatca/savelayout/savelayout.html
+++ b/trunk/Alatca/savelayout/savelayout.html
@@ -72,7 +72,7 @@
       
       <div class="lyrow">
   <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i><font><font>loại bỏ</font></font></a>
-  <span class="drag label"><i class="icon-move"></i><font><font>kéo</font></font></span>
+  <span class="drag label"><i class="icon-move"></i><font>kéo</font></span>
   <div class="preview"><font><font>93</font></font></div>
   <div class="view">
     <div class="row-fluid clearfix">
